[metadata]
name = PyRL-anonymity
author = Alex Giavaras
author-email = a.giavaras@gmail.com
licence = MIT
long_description = file: README.md
url = https://rl-anonymity-with-python.readthedocs.io/en/latest/index.html
requires-python = >=3.8
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Data Engineers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python